--- a/index.html
+++ b/index.html
@@ -1049,17 +1049,73 @@
             );
         }
 
-        // Incoming call modal
+        // Incoming call modal (styled)
         function IncomingCallModal({ callData, onAccept, onDecline }) {
+            useEffect(() => {
+                // Try to play a short ringtone via WebAudio (best-effort). May be blocked.
+                let ctx, osc, gain;
+                try {
+                    ctx = new (window.AudioContext || window.webkitAudioContext)();
+                    osc = ctx.createOscillator();
+                    gain = ctx.createGain();
+                    osc.type = 'sine';
+                    osc.frequency.value = 660;
+                    gain.gain.value = 0.0001; // start almost silent
+                    osc.connect(gain);
+                    gain.connect(ctx.destination);
+                    osc.start();
+                    // ramp up briefly to make a soft ring pattern
+                    let on = true;
+                    const interval = setInterval(() => {
+                        gain.gain.cancelScheduledValues(ctx.currentTime);
+                        if (on) {
+                            gain.gain.linearRampToValueAtTime(0.08, ctx.currentTime + 0.05);
+                        } else {
+                            gain.gain.linearRampToValueAtTime(0.0001, ctx.currentTime + 0.2);
+                        }
+                        on = !on;
+                    }, 650);
+                    // stop when callData removed
+                    return () => {
+                        clearInterval(interval);
+                        try { osc.stop(); } catch(e){}
+                        try { ctx.close(); } catch(e){}
+                    };
+                } catch (e) {
+                    return undefined;
+                }
+            }, [callData]);
+
             if (!callData) return null;
+
             return (
-                <div className="fixed inset-0 z-60 bg-black/40 flex items-center justify-center" onClick={onDecline}>
-                    <div className="bg-white rounded-xl shadow-xl w-full max-w-sm p-6" onClick={e => e.stopPropagation()}>
-                        <h3 className="text-lg font-semibold mb-2">Incoming Call</h3>
-                        <p className="text-sm text-slate-600 mb-4">{callData.fromName || 'Unknown'} is calling you.</p>
-                        <div className="flex justify-end space-x-3">
-                            <button onClick={onDecline} className="px-4 py-2 rounded-lg">Decline</button>
-                            <button onClick={onAccept} className="px-4 py-2 bg-green-600 text-white rounded-lg">Accept</button>
+                <div className="fixed inset-0 z-60 bg-gradient-to-br from-black/50 to-black/30 flex items-center justify-center p-4" onClick={onDecline}>
+                    <div className="bg-white rounded-2xl shadow-2xl w-full max-w-md p-6 transform transition-transform scale-100 hover:scale-[1.01]" onClick={e => e.stopPropagation()}>
+                        <div className="flex items-center space-x-4">
+                            <div className="relative">
+                                <img src={(callData && callData.fromAvatar) || 'https://api.dicebear.com/7.x/avataaars/svg?seed=caller'} alt="caller" className="w-20 h-20 rounded-full object-cover shadow" />
+                                <span className="absolute -bottom-1 -right-1 w-3 h-3 rounded-full bg-emerald-400 ring-2 ring-white" title="Ringing" />
+                            </div>
+                            <div className="flex-1">
+                                <div className="text-lg font-semibold">{callData.fromName || 'Unknown Caller'}</div>
+                                <div className="text-sm text-slate-500">Incoming voice call</div>
+                                <div className="mt-3 flex items-center space-x-2">
+                                    <div className="w-2 h-2 rounded-full bg-red-500 animate-pulse" />
+                                    <div className="text-xs text-slate-400">Ringing</div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div className="mt-6 flex items-center justify-between">
+                            <button onClick={onDecline} className="w-1/2 mr-2 flex items-center justify-center space-x-2 px-4 py-3 rounded-lg bg-rose-50 text-rose-600 hover:bg-rose-100">
+                                <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round"><path d="M10 14L14 10"/><path d="M14 14L10 10"/></svg>
+                                <span className="font-medium">Decline</span>
+                            </button>
+
+                            <button onClick={onAccept} className="w-1/2 ml-2 flex items-center justify-center space-x-2 px-4 py-3 rounded-lg bg-emerald-600 text-white hover:bg-emerald-700">
+                                <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round"><path d="M22 2L11 13"/><path d="M22 2L15 22L11 13L2 9L22 2Z"/></svg>
+                                <span className="font-medium">Accept</span>
+                            </button>
                         </div>
                     </div>
                 </div>
@@ -1107,44 +1163,45 @@
             };
 
             return (
-                <div className="fixed inset-0 z-70 bg-black/40 flex items-center justify-center p-4">
-                    <div className="bg-white rounded-xl shadow-xl w-full max-w-lg p-6" onClick={e => e.stopPropagation()}>
-                        <div className="flex items-center justify-between mb-4">
+                <div className="fixed inset-0 z-70 bg-gradient-to-br from-black/40 to-black/20 flex items-center justify-center p-4">
+                    <div className="bg-white/95 backdrop-blur-sm rounded-2xl shadow-2xl w-full max-w-2xl p-6" onClick={e => e.stopPropagation()}>
+                        <div className="flex items-center justify-between mb-6">
                             <div className="flex items-center space-x-4">
-                                <img src={targetUser?.avatar} alt="avatar" className="w-14 h-14 rounded-full bg-slate-100" />
+                                <div className="relative">
+                                    <img src={targetUser?.avatar} alt="avatar" className="w-20 h-20 rounded-full object-cover shadow" />
+                                    <span className="absolute -bottom-1 -right-1 w-3 h-3 rounded-full bg-emerald-400 ring-2 ring-white" />
+                                </div>
                                 <div>
-                                    <div className="font-semibold text-lg">{targetUser?.name || 'Calling...'}</div>
-                                    <div className="text-xs text-slate-500">{isInCall ? `In call • ${formatElapsed(elapsed)}` : (isCalling ? 'Calling...' : '')}</div>
+                                    <div className="text-2xl font-semibold">{targetUser?.name || 'Calling...'}</div>
+                                    <div className="text-sm text-slate-500 mt-1">{isInCall ? `In call • ${formatElapsed(elapsed)}` : (isCalling ? 'Calling...' : 'Connecting...')}</div>
                                 </div>
                             </div>
-                            <div className="flex items-center space-x-2">
-                                <button onClick={() => { onToggleMute && onToggleMute(); }} className="px-3 py-2 bg-slate-100 rounded-lg">
-                                    {muted ? 'Unmute' : 'Mute'}
-                                </button>
-                                <button onClick={() => { onHangup && onHangup(); }} className="px-3 py-2 bg-rose-600 text-white rounded-lg">End</button>
+                            <div className="flex items-center space-x-3">
+                                <div className="text-xs text-slate-400">Device</div>
+                                <div className="flex items-center space-x-2">
+                                    <select value={selectedMicId} onChange={e => onChangeMic && onChangeMic(e.target.value)} className="p-2 border rounded-lg text-sm">
+                                        {microphones && microphones.length ? microphones.map(m => <option key={m.deviceId} value={m.deviceId}>{m.label || 'Microphone'}</option>) : <option>No mics</option>}
+                                    </select>
+                                    <select value={selectedSpeakerId} onChange={e => onChangeSpeaker && onChangeSpeaker(e.target.value)} className="p-2 border rounded-lg text-sm">
+                                        {speakers && speakers.length ? speakers.map(s => <option key={s.deviceId} value={s.deviceId}>{s.label || 'Speaker'}</option>) : <option>No speakers</option>}
+                                    </select>
+                                </div>
                             </div>
                         </div>
 
-                        <div className="grid grid-cols-2 gap-4 mb-4">
-                            <div>
-                                <label className="text-xs text-slate-500">Microphone</label>
-                                <select value={selectedMicId} onChange={e => onChangeMic && onChangeMic(e.target.value)} className="w-full mt-1 p-2 border rounded-lg">
-                                    {microphones && microphones.length ? microphones.map(m => <option key={m.deviceId} value={m.deviceId}>{m.label || 'Microphone'}</option>) : <option>No microphones</option>}
-                                </select>
+                        <div className="grid grid-cols-3 gap-4 items-end">
+                            <div className="col-span-2">
+                                <div className="mb-2 text-sm text-slate-500">Live audio</div>
+                                <audio ref={audioRef} controls className="w-full rounded-lg border" />
                             </div>
-                            <div>
-                                <label className="text-xs text-slate-500">Speaker</label>
-                                <select value={selectedSpeakerId} onChange={e => onChangeSpeaker && onChangeSpeaker(e.target.value)} className="w-full mt-1 p-2 border rounded-lg">
-                                    {speakers && speakers.length ? speakers.map(s => <option key={s.deviceId} value={s.deviceId}>{s.label || 'Speaker'}</option>) : <option>No speakers</option>}
-                                </select>
+
+                            <div className="flex flex-col items-center space-y-3">
+                                <button onClick={() => { onToggleMute && onToggleMute(); }} className={`w-20 h-20 rounded-full flex items-center justify-center text-lg font-semibold ${muted ? 'bg-slate-200 text-slate-700' : 'bg-indigo-600 text-white'} shadow-lg`}> {muted ? 'Unmute' : 'Mute'}</button>
+                                <button onClick={() => { onHangup && onHangup(); }} className="w-20 h-12 rounded-lg bg-rose-600 text-white font-semibold shadow">End</button>
                             </div>
                         </div>
 
-                        <div className="mb-4">
-                            <audio ref={audioRef} controls className="w-full" />
-                        </div>
-
-                        <div className="text-xs text-slate-500">Allow microphone access if prompted. Speaker switching requires browser support.</div>
+                        <div className="mt-4 text-xs text-slate-500">Tip: Use the device selectors to change microphone or speaker during the call.</div>
                     </div>
                 </div>
             );
