--- a/index.html
+++ b/index.html
@@ -1174,8 +1174,8 @@
 
                         <div className="mt-6 text-xs text-white/60">Tip: Use the dropdowns to change microphone or speaker during the call.</div>
 
-                        <div className="hidden">
-                            <audio ref={audioRef} controls className="w-full" />
+                        <div className="mt-4">
+                            <audio ref={audioRef} controls className="w-full bg-black rounded-md" />
                         </div>
                     </div>
                 </div>
