--- a/index.html
+++ b/index.html
@@ -1053,8 +1053,8 @@
         function IncomingCallModal({ callData, onAccept, onDecline }) {
             if (!callData) return null;
             return (
-                <div className="fixed inset-0 z-80 flex items-center justify-center bg-black/60 backdrop-blur-sm p-4" onClick={onDecline}>
-                    <div className="bg-gradient-to-br from-slate-800/80 to-slate-900/90 border border-white/6 rounded-2xl shadow-2xl w-full max-w-3xl p-5 text-white" onClick={e => e.stopPropagation()}>
+                <div className="fixed inset-0 z-80 flex items-center justify-center bg-black/60 backdrop-blur-sm p-4">
+                    <div className="bg-gradient-to-br from-slate-800/80 to-slate-900/90 border border-white/6 rounded-2xl shadow-2xl w-full max-w-3xl p-5 text-white" onClick={e => e.stopPropagation()} role="dialog" aria-modal="true">
                         <div className="flex flex-col md:flex-row md:items-center md:space-x-6 gap-4">
                             <img src={allUsers && allUsers.find(u => u.id === callData.from)?.avatar} alt="caller" className="w-20 h-20 md:w-24 md:h-24 rounded-full ring-4 ring-white/10 bg-slate-800 mx-auto md:mx-0" />
                             <div className="flex-1 text-center md:text-left">
@@ -1069,10 +1069,10 @@
                         </div>
 
                         <div className="mt-5 grid grid-cols-1 md:flex md:flex-row md:justify-center md:space-x-6 gap-3">
-                            <button onClick={onDecline} className="w-full md:w-auto flex items-center justify-center px-4 py-3 bg-white/6 hover:bg-white/10 text-white rounded-full border border-white/10">
+                            <button onClick={onDecline} className="w-full md:w-auto flex items-center justify-center px-4 py-3 bg-white/6 hover:bg-white/10 text-white rounded-full border border-white/10" aria-label="Decline call">
                                 <span className="text-md">Decline</span>
                             </button>
-                            <button onClick={onAccept} className="w-full md:w-auto flex items-center justify-center px-5 py-3 bg-emerald-500 hover:bg-emerald-600 text-white rounded-full text-md shadow-lg">
+                            <button onClick={onAccept} className="w-full md:w-auto flex items-center justify-center px-5 py-3 bg-emerald-500 hover:bg-emerald-600 text-white rounded-full text-md shadow-lg" aria-label="Accept call">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round"><path d="M22 7.2a2 2 0 0 0-1.2-2.1l-3.8-1.6a2 2 0 0 0-2.3.5L9 8"/></svg>
                                 <span className="ml-2">Accept</span>
                             </button>
